force-app/main/default/objects/Tag_Assignment__c/Tag_Assignment__c.object-meta.xml
<CustomObject>
    <description>Junction recording the association between a Tag and a Contact OR an Account (exactly one, enforced by validation). Built extend-ready for other objects. JSI-122 Tag Management. Author: Jason Ott.</description>
    <label>Tag Assignment</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Tag Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tag Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>