force-app/main/default/objects/Tag_Assignment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account this tag is applied to. Populated when the assignment is created from an Account record; mutually exclusive with Contact (see Exactly_One_Parent validation). JSI-122.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tag Assignments</relationshipLabel>
    <relationshipName>Tag_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>