force-app/main/default/objects/Tag_Assignment__c/fields/Assignment_Key__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Key__c</fullName>
    <description>Backstop against applying the same tag twice to one record = Tag Id + &apos;|&apos; + (Contact Id or Account Id). Unique. Populated by the add path (Apex) and a before-save Flow for data loads. JSI-122.</description>
    <externalId>true</externalId>
    <label>Assignment Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>