force-app/main/default/objects/Tag_Assignment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact this tag is applied to. Populated when the assignment is created from a Contact record; mutually exclusive with Account (see Exactly_One_Parent validation). JSI-122.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tag Assignments</relationshipLabel>
    <relationshipName>Tag_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>