force-app/main/default/objects/Tag_Assignment__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The tag applied to the record. Restrict delete so a tag still in use cannot be deleted out from under its assignments. JSI-122.</description>
    <label>Tag</label>
    <referenceTo>Tag__c</referenceTo>
    <relationshipLabel>Tag Assignments</relationshipLabel>
    <relationshipName>Tag_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>