force-app/main/default/objects/Tag_Assignment__c/fields/Tag_Category__c.field-meta.xml
<CustomField>
    <fullName>Tag_Category__c</fullName>
    <description>Tag category, surfaced from the related Tag for grouping/filtering reports by category. JSI-122.</description>
    <formula>TEXT(Tag__r.Category__c)</formula>
    <label>Tag Category</label>
    <type>Text</type>
</CustomField>