force-app/main/default/objects/Tag_Assignment__c/fields/Tag_Name__c.field-meta.xml
<CustomField>
    <fullName>Tag_Name__c</fullName>
    <description>Tag value, surfaced from the related Tag for list views and reporting (custom report types can&apos;t dot-walk parent lookups). JSI-122.</description>
    <formula>Tag__r.Name</formula>
    <label>Tag Name</label>
    <type>Text</type>
</CustomField>